[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 5 - Production/Stable", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "EPICS IOC record search and meta information tool"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies", ]
keywords = []
name = "whatrecord"
requires-python = ">=3.9"

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[project.scripts]
whatrecord = "whatrecord.bin.main:main"

[tool.setuptools_scm]
write_to = "whatrecord/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "whatrecord*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
